8155880: Fix langtools usage of the deprecated Class.newInstance method
Reviewed-by: mcimadamore